--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "marriage-app",
   "version": "0.1.0",
-  "homepage": "https://sanhernandezmon.github.io/SantiYLina",
+  "homepage": "https://sanhernandezmon.github.io/MarriageWebSite",
 
   "private": true,
   "dependencies": {
