--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,4 +1,4 @@
-name: Deploy on Merge to Main
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -10,20 +10,16 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Check out the repository
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      # Set up Node.js
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '16' # Specify your Node.js version
+    - name: Install dependencies
+      run: npm install
 
-      # Install dependencies
-      - name: Install dependencies
-        run: npm install
+    - name: Build project
+      run: npm run build
 
-      # Run deploy script
-      - name: Run npm deploy
-        run: npm run deploy
+    - name: Deploy to GitHub Pages
+      run: npx gh-pages -d build
+      env:
+        GH_TOKEN: ${{ secrets.GH_TOKEN }}
