--- a/.github/workflows/ghPages.yaml
+++ b/.github/workflows/ghPages.yaml
@@ -6,23 +6,12 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
+
     runs-on: ubuntu-latest
-
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+    - uses: actions/checkout@v3
 
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build project
-      run: npm run build
-
-    - name: Check environment variable
-      run: echo $GH_TOKEN
-
-    - name: Deploy to GitHub Pages
-      run: npx gh-pages -d build
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    - name: Build and Deploy React app to GitHub Pages
+      uses: omkartapale/react-deployment-gh-pages@v1.0.0
